--- a/intro.qmd
+++ b/intro.qmd
@@ -1,5 +1,31 @@
-# Introduction
+---
+title: "Introduction"
+format:
+  html:
+    code-fold: true
+jupyter: python3
+---
 
-This is a book created from markdown and executable code.
+For a demonstration of a line plot on a polar axis, see @fig-polar.
+
+```{python}
+#| label: fig-polar
+#| fig-cap: "A line plot on a polar axis"
+
+import numpy as np
+import matplotlib.pyplot as plt
+
+r = np.arange(0, 2, 0.01)
+theta = 2 * np.pi * r
+fig, ax = plt.subplots(
+  subplot_kw = {'projection': 'polar'} 
+)
+fig.patch.set_facecolor("#fcfcfc")
+ax.set_facecolor("#fcfcfc")
+ax.plot(theta, r)
+ax.set_rticks([0.5, 1, 1.5, 2])
+ax.grid(True)
+plt.show()
+```
 
 See @knuth84 for additional discussion of literate programming.
