--- a/404.qmd
+++ b/404.qmd
@@ -5,12 +5,14 @@ format:
     css: styles.css
 ---
 
-<div style="text-align: center; font-size: 300px; font-weight: bold;">
-  404
-</div>
-<div style="text-align: center;">
-<span style="display: block;">The requested page cannot be found.</span>
-<span style="display: block;">You may have mistyped the address or the page may have moved.</span>
+<div style="page-layout-custom;">
+ <div style="text-align: center; font-size: 300px; font-weight: bold;">
+ 404
+ </div>
+ <div style="text-align: center;">
+ <span style="display: block;">The requested page cannot be found.</span>
+ <span style="display: block;">You may have mistyped the address or the page may have moved.</span>
+ </div>
 </div>
 
 
