--- a/index.qmd
+++ b/index.qmd
@@ -4,6 +4,6 @@ The motivation for writing this book arose from the realisation that, despite th
 
 As someone who, like many before me, transitioned into this field from a purely scientific background (in my case, that was computational chemistry), I found it daunting to grasp the breadth of this field without any first-hand experience or guidance, which would probably came with experience if had I previously taken a job in a quant shop before venturing into a solo practice. Through my personal experience, I hope that aspiring quants may gain insight into the interdisciplinary nature of quantitative finance, and quickly familiarise themselves with the essential material that they need to know before embarking on this journey.
 
-It is important to note that everything presented in this book can be found in other works (worded differently, of course), which is why in this regard, I consider myself more of a curator than a writer. I deliberately chosen not to put this work behind a paywall to ensure that everyone can have access to this information, and to invite contributions from more experienced quants. My hope is that this becomes a living document that is continuously updated with novel breakthroughs in the field, and serve as a decent reference guide for the quant community. 
+It is important to note that everything presented in this book can be found in other works (worded differently, of course), which is why in this regard, I consider myself more of a curator than a writer. I have deliberately chosen not to put this work behind a paywall to ensure that everyone can have access to this information, and to invite contributions from more experienced quants. My hope is that this becomes a living document that is continuously updated with novel breakthroughs in the field, and serve as a decent reference guide for the quant community.
 
 Lastly, a word of caution. Just as there are no architecture books that provide complete plans for constructing specific structures, this book does not offer explicit strategies unless they are used for explanatory purposes. It is unfortunate to find many books which promote specific trading strategies, only to fail miserably in practice. Hopefully, reading this book will empower you to discern and avoid them.
