--- a/references.bib
+++ b/references.bib
@@ -1,19 +1,25 @@
-@article{knuth84,
-  author = {Knuth, Donald E.},
-  title = {Literate Programming},
-  year = {1984},
-  issue_date = {May 1984},
-  publisher = {Oxford University Press, Inc.},
-  address = {USA},
-  volume = {27},
-  number = {2},
-  issn = {0010-4620},
-  url = {https://doi.org/10.1093/comjnl/27.2.97},
-  doi = {10.1093/comjnl/27.2.97},
-  journal = {Comput. J.},
-  month = may,
-  pages = {97–111},
-  numpages = {15}
+@article{Knuth1984,
+  title     = {Literate Programming},
+  volume    = {27},
+  issn      = {1460-2067},
+  url       = {http://dx.doi.org/10.1093/comjnl/27.2.97},
+  doi       = {10.1093/comjnl/27.2.97},
+  number    = {2},
+  journal   = {The Computer Journal},
+  publisher = {Oxford University Press (OUP)},
+  author    = {Knuth, D. E.},
+  year      = {1984},
+  month     = feb,
+  pages     = {97–111}
+}
+
+@article{chaney1991impact,
+  title     = {The impact of new product introductions on the market value of firms},
+  author    = {Chaney, Paul K and Devinney, Timothy M and Winer, Russell S},
+  journal   = {Journal of Business},
+  pages     = {573--610},
+  year      = {1991},
+  publisher = {JSTOR}
 }
 
 
